[ITB-2079] Memory leak in test engine (gitb-srv) leading to eventual degradation when launching test sessions